cluster/apps/external-services/portainer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
spec:
  ports:
    - name: https
      protocol: TCP
      port: 9443
      targetPort: https
  type: ClusterIP
