cluster/apps/external-services/portainer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: external-services
  labels:
    app.kubernetes.io/name: portainer
  annotations:
    hajimari.io/enable: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "portainer.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9443
  tls:
    - hosts:
        - "portainer.${SECRET_DOMAIN}"
      secretName: portainer-tls
